// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseRow should render a cell per column 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftSection
    cells={
      Array [
        <div
          className=""
          style={
            Object {
              "flex": "0 0 50px",
              "width": "50px",
            }
          }
        >
          Row A / Column A
        </div>,
      ]
    }
  />
  <ScrollableSection
    cells={
      Array [
        <div
          className=""
          style={
            Object {
              "flex": "0 0 150px",
              "width": "150px",
            }
          }
        >
          Row A / Column B
        </div>,
      ]
    }
    onScroll={[Function]}
    rowId={-1}
    scrollLeft={0}
  />
  <RightSection
    cells={
      Array [
        <div
          className=""
          style={
            Object {
              "flex": "0 0 50px",
              "width": "50px",
            }
          }
        >
          Row A / Column C
        </div>,
      ]
    }
  />
</div>
`;

exports[`BaseRow should render an empty cell if no data key is provided 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftSection
    cells={Array []}
  />
  <ScrollableSection
    cells={
      Array [
        <div
          className=""
          style={
            Object {
              "flex": "0 0 50px",
              "width": "50px",
            }
          }
        >
          
        </div>,
      ]
    }
    onScroll={[Function]}
    rowId={-1}
    scrollLeft={0}
  />
  <RightSection
    cells={Array []}
  />
</div>
`;

exports[`BaseRow should render its default content 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftSection
    cells={Array []}
  />
  <ScrollableSection
    cells={Array []}
    onScroll={[Function]}
    rowId={-1}
    scrollLeft={0}
  />
  <RightSection
    cells={Array []}
  />
</div>
`;

exports[`BaseRow should set isSticky when isSticky is provided 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
      "position": "sticky",
      "top": "0",
      "zIndex": "1000",
    }
  }
>
  <LeftSection
    cells={Array []}
  />
  <ScrollableSection
    cells={Array []}
    onScroll={[Function]}
    rowId={-1}
    scrollLeft={0}
  />
  <RightSection
    cells={Array []}
  />
</div>
`;
